--- a/src/css/components/general/landingpage/contactUs.css
+++ b/src/css/components/general/landingpage/contactUs.css
@@ -21,7 +21,7 @@ label{
     margin:1em 0 .2em;
 }
 /* single-line text, checkbox, and button */
-input, select, textarea{
+input, select, textarea, button{
     display:block;
     width:100%;
     padding:.3em;
@@ -54,6 +54,14 @@ input[type=submit]{
     border-radius:8px;
     transition:all .3s ease-out;
 }
+button {
+    background:lightcoral;
+    margin:1em 0 0;
+    color:white;
+    border:none;
+    border-radius:8px;
+    transition:all .3s ease-out;
+}
 
 input:focus,
 input:hover,
@@ -67,6 +75,11 @@ textarea:hover{
 /* hover and focus states */
 input[type=submit]:hover,
 input[type=submit]:focus{
+    background: lightgreen;
+    outline:none;
+}
+
+button:hover,button:focus {
     background: lightgreen;
     outline:none;
 }
