--- a/src/css/components/general/header.css
+++ b/src/css/components/general/header.css
@@ -26,6 +26,14 @@
 }
 
 /* Logo */
+.logo-img {
+    height: 40px;
+    display: flex;
+}
+
+.margin-right {
+    margin-right: 10px;
+}
 
 .header-fixed .header-limiter h1 {
     float: left;
